tests/success/decl.ec
type t.
op o : t -> t.
op o : (t, t) -> t.
