tests/fail/0004_op_infix.ec
type t.

op [+] : t -> t.